# fconline-coach-agent

./: .gitignore  README.md  pyproject.toml  run_demo.sh
fconline_coach_agent/: agent.py  app.py  constant.py  gradio_utils.py  models.py  utils.py  verifier.py
fconline_coach_agent/data/: formation.py  indiv_tactic.py  position.py  team_tactic.py
fconline_coach_agent/prompts/: casual.py  indiv_updater.py  parser.py  router.py  updater.py  verifier.py
